<resources>
    <string name="app_name">First_App</string>
    <string name="HelloWorld">你好，世界！</string>
    <string name="Start">开始</string>
    <string name="Hello_World">你好，安卓！</string>
    <string name="text_1">Hello</string>
    <string name="text_2">JNU</string>
    <string name="button_1">change text</string>
    <string name="click">点击响应！</string>
    <string name="string_item_price">item_price</string>
    <string name="string_item_name">item name</string>
    <string name="string_ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>